# NLP-task

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/: main.py
src/api/: dependencies.py  router.py
src/api/v1/: router.py
src/api/v1/endpoints/: audio.py
src/celery/: celery.py  config.py
src/core/: config.py
src/core/db/: types.py
src/core/enums/: audio.py
src/db/: session.py
src/db/models/: __init__.py  audio.py  base.py
src/migrations/: env.py
src/migrations/versions/: 9c2e0c502796_add_audioprocessingtask_model.py
src/schemas/: audio.py
src/services/: genai.py  minio.py
src/tasks/: audio.py
